plang/testing/logs/false-incorrect/62/program62.p.p.out
Error at bHw (QH) (wJ) (CRGY2) (Coku) :- (hA); bf (wJbpk TlD CxJcM (X) u) (mH) FWMkr; vI OY7 (WPHoQ) e55.:10:31 error: 
bHw (QH) (wJ) (CRGY2) (Coku) :- (hA); bf (wJbpk TlD CxJcM (X) u) (mH) FWMkr; vI OY7 (WPHoQ) e55.
                              ^
Error at bHw (QH) (wJ) (CRGY2) (Coku) :- (hA); bf (wJbpk TlD CxJcM (X) u) (mH) FWMkr; vI OY7 (WPHoQ) e55.:10:35 error: 
bHw (QH) (wJ) (CRGY2) (Coku) :- (hA); bf (wJbpk TlD CxJcM (X) u) (mH) FWMkr; vI OY7 (WPHoQ) e55.
                                  ^
Error at bHw (QH) (wJ) (CRGY2) (Coku) :- (hA); bf (wJbpk TlD CxJcM (X) u) (mH) FWMkr; vI OY7 (WPHoQ) e55.:10:75 error: 
bHw (QH) (wJ) (CRGY2) (Coku) :- (hA); bf (wJbpk TlD CxJcM (X) u) (mH) FWMkr; vI OY7 (WPHoQ) e55.
                                                                          ^